2008-10-03  Michael Snyder  <msnyder@vmware.com>

	* linux-record.c (record_linux_system_call): Cast sizeof 
	in printf calls, avoid compiler warnings on 64 bit hosts.

2008-10-04  Michael Snyder  <msnyder@vmware.com>

	* reverse.c (show_exec_direction_func): Don't error, just inform.

2008-10-03  Michael Snyder  <msnyder@vmware.com>

	* linux-record.c (record_linux_system_call): Cast sizeof to int
	in printf calls, avoid compiler warnings on 64 bit hosts.

2008-10-02  Michael Snyder  <msnyder@vmware.com>

	* record.c (record_open): Call target_can_async_p() instead
	of relying on a global variable.
	* record.h (record_linux_async_permitted): Delete.
	* linux-nat.c (record_linux_async_permitted): Delete reference.

2008-09-19  Michael Snyder  <msnyder@vmware.com>

	* record.c (trivial): Fix two commas in a comment.

	* record.c (record_wait): On end of record log, return
	TARGET_WAITKIND_NO_HISTORY and let infrun decide what to do.

2008-09-19  Hui Zhu  <teawater@gmail.com>

	* record.c (record_wait): Fix the bug of forware step after
	reverse step.
	Make debug message more clean.
	Remove variable record_list_status.

	* i386-tdep.c (i386_record): Fix the bug of "0x80 ... 0x83".

2008-09-15  Michael Snyder  <msnyder@vmware.com>

	* infrun.c (proceed): No need to singlestep over a breakpoint
	when resuming in reverse.

2008-09-11  Hui Zhu  <teawater@gmail.com>

	* record.c (record_resume): Change
	"record_ops.beneath->to_resume" to "record_beneath_to_resume".

2008-09-09  Hui Zhu  <teawater@gmail.com>

	* i386-tdep.c (i386_record): Record the memory change of FP instructions.

2008-09-07  Hui Zhu  <teawater@gmail.com>

	* record.c (record_wait): Add code to deal with record_first.

2008-09-06  Michael Snyder  <msnyder@vmware.com>

	* record-linux.c: Comment and message string cleanup.
	* record.c: Comment and message string cleanup.
	Add some function header comments.

2008-09-04  Michael Snyder  <msnyder@vmware.com>
